# fortran_omp_cmake_tests

./: CMakeLists.txt  vcpkg.json
.github/workflows/: ccpp.yml
src/: test1.f90  test2.f90
